--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <description>React4j TodoMVC implementation</description>
 
   <properties>
-    <gwt.version>2.8.2</gwt.version>
+    <gwt.version>2.8.2-v20191108</gwt.version>
     <gwt-maven-plugin.version>1.0-rc-9</gwt-maven-plugin.version>
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -59,12 +59,12 @@
       <version>${arez-spytools.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.realityforge.com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
       <version>${gwt.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.realityforge.com.google.gwt</groupId>
       <artifactId>gwt-dev</artifactId>
       <version>${gwt.version}</version>
     </dependency>
