--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
                 <compilerArg>-checkAssertions</compilerArg>
                 <compilerArg>-XmethodNameDisplayMode</compilerArg>
                 <compilerArg>FULL</compilerArg>
-                <compilerArg>-noincremental</compilerArg>
+                <compilerArg>-incremental</compilerArg>
               </compilerArgs>
               <skipModule>true</skipModule>
               <startupUrls>
