--- a/build_defs/dependencies.yml
+++ b/build_defs/dependencies.yml
@@ -1,3 +1,8 @@
+repositories:
+  - name: central
+    url: https://repo.maven.apache.org/maven2
+  - name: stock
+    url: https://stocksoftware.jfrog.io/stocksoftware/staging
 options:
   aliasStrategy: ArtifactId
   supportDependencyOmit: true
@@ -6,7 +11,7 @@ options:
     exportDeps: true
   includeSource: false
 artifacts:
-  - coord: com.google.gwt:gwt-dev:2.8.2
+  - coord: org.realityforge.com.google.gwt:gwt-dev:2.8.2-v20191108
     excludes: ['xerces:xercesImpl']
   - coord: org.mortbay.jasper:apache-jsp
     aliasStrategy: GroupIdAndArtifactId
