--- a/build.yaml
+++ b/build.yaml
@@ -35,12 +35,16 @@ artifacts:
   react4j_dom: org.realityforge.react4j:react4j-dom:jar:0.141
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.141
 
-  dagger_core: com.google.dagger:dagger:jar:2.19
-  dagger_spi: com.google.dagger:dagger-spi:jar:2.19
-  dagger_producers: com.google.dagger:dagger-producers:jar:2.19
-  dagger_compiler: com.google.dagger:dagger-compiler:jar:2.19
+  dagger_core: com.google.dagger:dagger:jar:2.25.2
+  dagger_producers: com.google.dagger:dagger-producers:jar:2.25.2
+  dagger_spi: com.google.dagger:dagger-spi:jar:2.25.2
+  dagger_compiler: com.google.dagger:dagger-compiler:jar:2.25.2
   googlejavaformat: com.google.googlejavaformat:google-java-format:jar:1.5
   errorprone: com.google.errorprone:javac-shaded:jar:9-dev-r4023-3
+  guava_failureaccess: com.google.guava:failureaccess:jar:1.0.1
+  kotlinx_metadata_jvm: org.jetbrains.kotlinx:kotlinx-metadata-jvm:jar:0.1.0
+  kotlin_stdlib: org.jetbrains.kotlin:kotlin-stdlib:jar:1.3.50
+  kotlin_stdlib_common: org.jetbrains.kotlin:kotlin-stdlib-common:jar:1.3.50
   javapoet: com.squareup:javapoet:jar:1.11.1
   guava: com.google.guava:guava:jar:25.0-jre
 
