--- a/build_defs/dependencies.yml
+++ b/build_defs/dependencies.yml
@@ -11,6 +11,7 @@ options:
     exportDeps: true
   includeSource: false
 artifacts:
+  - coord: org.realityforge.com.google.gwt:gwt-user:2.8.2-v20191108
   - coord: org.realityforge.com.google.gwt:gwt-dev:2.8.2-v20191108
     excludes: ['xerces:xercesImpl']
   - coord: org.mortbay.jasper:apache-jsp
