--- a/build.yaml
+++ b/build.yaml
@@ -33,21 +33,5 @@ artifacts:
   react4j_core: org.realityforge.react4j:react4j-core:jar:0.149
   react4j_dom: org.realityforge.react4j:react4j-dom:jar:0.149
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.149
-
-  dagger_core: com.google.dagger:dagger:jar:2.25.2
-  dagger_producers: com.google.dagger:dagger-producers:jar:2.25.2
-  dagger_spi: com.google.dagger:dagger-spi:jar:2.25.2
-  dagger_compiler: com.google.dagger:dagger-compiler:jar:2.25.2
-  googlejavaformat: com.google.googlejavaformat:google-java-format:jar:1.5
-  errorprone: com.google.errorprone:javac-shaded:jar:9-dev-r4023-3
-  guava_failureaccess: com.google.guava:failureaccess:jar:1.0.1
-  kotlinx_metadata_jvm: org.jetbrains.kotlinx:kotlinx-metadata-jvm:jar:0.1.0
-  kotlin_stdlib: org.jetbrains.kotlin:kotlin-stdlib:jar:1.3.50
-  kotlin_stdlib_common: org.jetbrains.kotlin:kotlin-stdlib-common:jar:1.3.50
-  javapoet: com.squareup:javapoet:jar:1.12.0
-  guava: com.google.guava:guava:jar:27.1-jre
-
-  dagger_gwt: org.realityforge.dagger:dagger-gwt-lite:jar:2.25.2-rf1
-
-  javax_inject: javax.inject:javax.inject:jar:1
-  javax_inject_sources: javax.inject:javax.inject:jar:sources:1
+  sting_core: org.realityforge.sting:sting-core:jar:0.01
+  sting_processor: org.realityforge.sting:sting-processor:jar:0.01
