--- a/build.yaml
+++ b/build.yaml
@@ -35,6 +35,8 @@ artifacts:
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.151
 
   dagger_core: com.google.dagger:dagger:jar:2.25.2
+  dagger_core_sources: com.google.dagger:dagger:jar:sources:2.25.2
+  dagger_gwt: com.google.dagger:dagger-gwt:jar:2.25.2
   dagger_producers: com.google.dagger:dagger-producers:jar:2.25.2
   dagger_spi: com.google.dagger:dagger-spi:jar:2.25.2
   dagger_compiler: com.google.dagger:dagger-compiler:jar:2.25.2
@@ -46,8 +48,6 @@ artifacts:
   kotlin_stdlib_common: org.jetbrains.kotlin:kotlin-stdlib-common:jar:1.3.50
   javapoet: com.squareup:javapoet:jar:1.12.0
   guava: com.google.guava:guava:jar:27.1-jre
-
-  dagger_gwt: org.realityforge.dagger:dagger-gwt-lite:jar:2.25.2-rf1
 
   javax_inject: javax.inject:javax.inject:jar:1
   javax_inject_sources: javax.inject:javax.inject:jar:sources:1
