--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <repository>
       <id>vertispan-releases</id>
       <name>Vertispan hosted artifacts-releases</name>
-      <url>https://repo.vertispan.com/j2cl</url>
+      <url>https://repo.vertispan.com/j2cl/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -69,7 +69,7 @@
     <pluginRepository>
       <id>vertispan-releases</id>
       <name>Vertispan hosted artifacts-releases</name>
-      <url>https://repo.vertispan.com/j2cl</url>
+      <url>https://repo.vertispan.com/j2cl/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
