--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -7,6 +7,7 @@ _DEPS = [
     "//thirdparty:arez_core",
     "//thirdparty:arez_processor",
     "//thirdparty:arez_spytools",
+    "//thirdparty:elemental2_core",
     "//thirdparty:elemental2_dom",
     "//build_defs:gwt_user",
     "//thirdparty:javax_annotation",
