--- a/build.yaml
+++ b/build.yaml
@@ -34,6 +34,6 @@ artifacts:
   react4j_dom: org.realityforge.react4j:react4j-dom:jar:0.178
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.178
 
-  spritz_core: org.realityforge.spritz:spritz-core:jar:0.10-41-gd689564
+  spritz_core: org.realityforge.spritz:spritz-core:jar:0.11
 
   zemeckis: org.realityforge.zemeckis:zemeckis-core:jar:0.01
