--- a/pom.xml
+++ b/pom.xml
@@ -132,30 +132,6 @@
       <artifactId>base</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
-
-    <!--
-      The following three annotation processor dependencies are required as
-      j2cl-maven-plugin does not use the maven compiler plugin and thus does not
-      pick up the annotation processor configuration.
-    -->
-    <dependency>
-      <groupId>org.realityforge.react4j</groupId>
-      <artifactId>react4j-processor</artifactId>
-      <version>${react4j.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.realityforge.arez</groupId>
-      <artifactId>arez-processor</artifactId>
-      <version>${arez.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.realityforge.sting</groupId>
-      <artifactId>sting-processor</artifactId>
-      <version>${sting.version}</version>
-      <scope>provided</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -190,10 +166,11 @@
       <plugin>
         <groupId>com.vertispan.j2cl</groupId>
         <artifactId>j2cl-maven-plugin</artifactId>
-        <version>0.13-SNAPSHOT</version>
+        <version>0.17-SNAPSHOT</version>
         <executions>
           <execution>
-            <phase>process-sources</phase>
+            <id>build-js</id>
+            <phase>prepare-package</phase>
             <goals>
               <goal>build</goal>
             </goals>
