Lock down compatible braincheck version

--- a/pom.xml
+++ b/pom.xml
@@ -119,8 +119,8 @@
     </dependency>
     <dependency>
       <groupId>org.realityforge.braincheck</groupId>
-      <artifactId>braincheck-j2cl</artifactId>
-      <version>1.29.0</version>
+      <artifactId>braincheck-core</artifactId>
+      <version>1.30.0</version>
     </dependency>
     <dependency>
       <groupId>org.realityforge.sting</groupId>
@@ -182,12 +182,6 @@
           <initialScriptFilename>react4j-todomvc/react4j-todomvc.js</initialScriptFilename>
           <compilationLevel>ADVANCED</compilationLevel>
           <env>CUSTOM</env>
-          <dependencyReplacements>
-            <dependencyReplacement>
-              <original>org.realityforge.braincheck:braincheck</original>
-              <replacement>org.realityforge.braincheck:braincheck-j2cl:1.29.0</replacement>
-            </dependencyReplacement>
-          </dependencyReplacements>
           <defines>
             <jre.checkedMode>DISABLED</jre.checkedMode>
             <jre.checks.checkLevel>MINIMAL</jre.checks.checkLevel>
